cmake_minimum_required(VERSION 3.16)
project(8_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(8_1 main.cpp median.h median.cpp Student_info.h Student_info.cpp grade.h grade.cpp template.h average.h average.cpp average_grade.cpp average_grade.h did_all_hw.h did_all_hw.cpp grade_aux.h grade_aux.cpp optimistic.cpp optimistic.h)