cmake_minimum_required(VERSION 3.16)
project(6_0)

set(CMAKE_CXX_STANDARD 14)

add_executable(6_0 main.cpp Student_info.h Student_info.cpp grade.h grade.cpp median.h median.cpp average_analysis.h average_analysis.cpp optimistic_median_analysis.h optimistic_median_analysis.cpp median_analysis.h median_analysis.cpp)