cmake_minimum_required(VERSION 3.16)
project(6_6)

set(CMAKE_CXX_STANDARD 14)

add_executable(6_6 main.cpp did_all_hw.h doAnalysis.h grade.h grade_aux.h median.h optimistic_median.h Student_info.h write_analysis.h Student_info.cpp average_analysis.h average_analysis.cpp did_all_hw.cpp doAnalysis.cpp grade.cpp grade_aux.cpp median.cpp optimistic_median.cpp write_analysis.cpp)